Fix for footer and FAQ

--- a/posts/test-article-4.mdx
+++ b/posts/test-article-4.mdx
@@ -10,3 +10,7 @@ description: |
 imageUrl: '/posts/test-article/akshay.jpg'
 ---
 
+## Experienced
+
+Community Founder @ GrowIn Community
+Thrilled to be part of the upcoming meetup organized by The GrowIn Community and The CloudOps Community! As a mentor, I'm committed to providing valuable insights to help participants navigate the dynamic fields of Cloud, DevOps, and SRE. Looking forward to meaningful interactions and knowledge exchange!
